# TerminalWelcome

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.ini  converter.py  echo_to_screen.py  fortunes.txt  main.py  one_liners.py  oneliner.sh  pokemons.py  pyproject.toml  setup.py  welcome.sh
.github/: FUNDING.yml
config/: poketermconfig.ini
data/: pokemons.py
scripts/: main.py
src/: __init__.py  __main__.py  main.py  poketermconfig.ini  poketermconfig.ini.default
tests/: test_cli.py  test_runs_counter.py
